[project]
name = "nanovlm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "einops>=0.8.2",
    "huggingface-hub>=1.7.2",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
]
